Fix crate name.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "pjsua"
+name = "pjproject"
 version = "0.1.0"
 authors = ["Mathias Gottschlag <mgottschlag@gmail.com>"]
 edition = "2018"
